# grpc-demo

./: Cargo.toml  README.md
src/: client.rs
