[package]
name = "grpc-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"